<resources>
    <string name="app_name">FoodCalendar</string>
    <string name="welcome_message">Welcome to FoodCalendar! Introduce your data to start using the app.</string>
    <string name="enter_details">Enter your details</string>
    <string name="name">Name</string>
    <string name="weight">Weight (kg)</string>
    <string name="height">Height (cm)</string>
    <string name="save">Save</string>
    <string name="add_food">Add Food</string>
    <string name="introduce_details">Introduce the details</string>
    <string name="food_name">Food Name</string>
    <string name="calories">Calories (kcal/100g)</string>
    <string name="protein">Protein (g per 100g)</string>
    <string name="fat">Fat (g per 100g)</string>
    <string name="carbs">Carbs (g per 100g)</string>
    <string-array name="meal_categories">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Dinner</item>
        <item>Snack</item>
    </string-array>
    <string name="view_statistics">View Statistics</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_daily_summary">DailySummaryActivity</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_meal_list">MealListActivity</string>
    <string name="selected_breakfast">Selected Breakfast: %1$s</string>
    <string name="selected_lunch">Selected Lunch: %1$s</string>
    <string name="selected_dinner">Selected Dinner: %1$s</string>
    <string name="selected_snack">Selected Snack: %1$s</string>
    <string name="calories_consumed">Calories Consumed: %1$d</string>
    <string name="calories_remaining">Calories Remaining: %1$d</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="snack">Snack</string>
    <string name="add">Add</string>
    <string name="statistics">Statistics</string>
    <string name="selected_date">Selected Date: %1$s</string>
    <string name="no_meals_for_date">No meals recorded for this date.</string>
    <string name="total_calories">Total Calories: %1$d kcal</string>
    <string name="add_new_food">Add new food</string>
    <string name="select_a_food">Select a Food</string>
    <string name="user_name">User Name</string>
    <string name="user_weight">Weight (kg)</string>
    <string name="user_height">Height: %1$d cm</string>
    <string name="calorie_goal">Calorie goal (kcal/day)</string>
    <string name="save_button">Save</string>
    <string name="calorie_goal_updated">User data updated</string>
    <string name="food_added">Food added successfully</string>
    <string name="complete_fields">Please complete all fields</string>
    <string name="meal_quantity_updated">Meal quantity updated</string>
    <string name="meal_added_successfully">Meal added successfully</string>
    <string name="user_data_saved">Data saved successfully</string>
    <string name="search_food">Search food</string>
    <string name="quantity_grams">Quantity (grams)</string>
    <string name="add_meal">Add Meal</string>
    <string name="calories_per_100g">Calories: %1$d kcal (per 100g)</string>
    <string name="proteins_per_100g">Proteins: %1$d g</string>
    <string name="fats_per_100g">Fats: %1$d g</string>
    <string name="carbs_per_100g">Carbs: %1$d g</string>
    <string name="no_meals">No meals added</string>
    <string name="meal_added">Meal added successfully!</string>
    <string name="select_food">Select a food</string>
    <string name="quantity_required">Please enter a valid quantity</string>
    <string name="average_calories">Average Calories: %1$d kcal</string>
    <string name="meal_count">Meal Count: %1$d</string>
    <string name="total_proteins">Total Proteins: %1$d g</string>
    <string name="total_fats">Total Fats: %1$d g</string>
    <string name="total_carbs">Total Carbs: %1$d g</string>
    <string name="please_select_food">Please select a food</string>
    <string name="please_enter_valid_quantity">Please enter a valid quantity</string>
    <string name="added_food">Added %1$d g of %2$s (%3$d kcal)</string>
    <string name="enter_search_term">Please enter a search term</string>
    <string name="failed_to_fetch">Failed to fetch results</string>
    <string name="search_food_by_name">Search food by name</string>
    <string name="search">Search</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="confirmation">Confirmation</string>
    <string name="confirm_save_food">Are you sure you want to save this food?</string>
    <string name="confirm_save_meal">Are you sure you want to save this meal? This action cannot be undone.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="confirm_delete_food">Are you sure you want to delete %1$s?</string>
    <string name="food_deleted">Food deleted successfully</string>
    <string name="confirm_save_data">Are you sure you want to update this data?</string>
</resources>