<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/welcomeMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/introduce_details"
        android:textSize="18sp"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <EditText
        android:id="@+id/foodNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/food_name" />

    <EditText
        android:id="@+id/foodCaloriesInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/calories"
        android:inputType="number" />

    <EditText
        android:id="@+id/foodProteinInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/protein"
        android:inputType="number" />

    <EditText
        android:id="@+id/foodFatInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/fat"
        android:inputType="number" />

    <EditText
        android:id="@+id/foodCarbsInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/carbs"
        android:inputType="number" />

    <Button
        android:id="@+id/saveFoodButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_food"
        android:layout_marginTop="16dp" />
</LinearLayout>
