<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/user_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_name"
            android:textAppearance="?attr/textAppearanceHeadline6"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/user_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_weight"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/user_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_height"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calorie_goal"
                android:textSize="18sp"
                android:layout_gravity="center_vertical" />

            <EditText
                android:id="@+id/user_goal"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/calorie_goal"
                android:inputType="number" />
        </LinearLayout>

        <Button
            android:id="@+id/save_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />
    </LinearLayout>

    <fragment
        android:id="@+id/bottom_nav_fragment"
        android:name="es.uma.foodcalendar.BottomNavFragment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true" />
</RelativeLayout>